# geodynamix

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Changelog.txt  LICENSE  README.md  bootstrap.py  build-standalone.bat  build.py  gdxconfig.h.in  vcpkg.json  version.rc.in
.github/codeql/: codeql-config.yml
.github/workflows/: build-linux.yml  build-osx.yml  build-windows.yml  codeql-analysis.yml  conda-build.yml  create-release.yml  vcpkg-build.yml
algorithms/: CMakeLists.txt  categoryio.cpp  polygoncoverage.cpp  rasterize.cpp  rasterizelineantialiased.cpp  reclass.cpp  shape.cpp  suminbuffer.cpp
algorithms/include/gdx/algo/: accuflux.h  addpoints.h  aggregateandspreadmultiresolution.h  aggregatemultiresolution.h  algorithm.h  arealweighteddistribution.h  blurfilter.h  bufferstyle.h  category.h  categoryio.h  choropleth.h  clip.h  clusterid.h  clustersize.h  clusterutils.h  colormap.h  conditionals.h  conversion.h  dasline.h  dasmap.h  dasmaplineairdistribution.h  dasmapmultiresolution.h  distance.h  distancedecay.h  distribute.h  filter.h  majorityfilter.h  masking.h  mathoperations.h  maximum.h  minimum.h  multiresolution.h  nodata.h  normalise.h  polygoncoverage.h  propdist.h  random.h  rasterize.h  rasterizelineantialiased.h  reclass.h  (+10 more)
algorithms/test/: CMakeLists.txt  accufluxtest.cpp  addpointstest.cpp  aggregateandspreadmultiresolutiontest.cpp  aggregatemultiresolutiontest.cpp  algorithmtest.cpp  arealweighteddistributiontest.cpp  casttest.cpp  categoryiotest.cpp  categorytest.cpp  choroplethtest.cpp  cliptest.cpp  clusteridtest.cpp  clustersizetest.cpp  conditionalstest.cpp  daslinetest.cpp  dasmaplineairdistributiontest.cpp  dasmapmultiresolutiontest.cpp  dasmaptest.cpp  distancedecaytest.cpp  distancetest.cpp  distributetest.cpp  filtertest.cpp  logicaltest.cpp  majoritytest.cpp  maskingtest.cpp  mathoperationstest.cpp  maximumtest.cpp  minimumtest.cpp  nodatatest.cpp  normalisetest.cpp  polygoncoveragetest.cpp  propdisttest.cpp  rasterizelineantialiasedtest.cpp  rasterizetest.cpp  reclasstest.cpp  suminbuffertest.cpp  sumtest.cpp  sumwithintraveldistancetest.cpp  tablerowtest.cpp  (+5 more)
algorithms/test/data/: addpoints.dbf  addpoints.shp  addpoints.shx  dasline.dbf  dasline.shp  dasline.shx  dasline2.dbf  dasline2.shp  dasline2.shx  propdist.dbf  propdist2.dbf  propdist2.shp  propdist2.shx  propdist3.dbf  propdist3.sbn  propdist3.sbx  propdist3.shp  propdist3.shx  propdist3_meta.tif  weightedpropdist.shp  weightedpropdist.shx
algorithms/test/data/reference/: propdist3.tif
benchmarks/: CMakeLists.txt  denserasternonsimd.h  iterbench.cpp  rasterbench.cpp  sumbench.cpp
cmake/: GdxConfig.cmake.in  GeodynamixConfig.cmake.in
common/: CMakeLists.txt
common/include/gdx/: rasteriterator.h
conda/: bld.bat  build.sh  conda_build_config.yaml  init.py  metagen.py
conda/templates/: meta.yaml.jinja
core/: CMakeLists.txt  raster.cpp
core/include/gdx/: cpupredicates-private.h  denseraster.h  denserasterio.h  eigenio.h  maskedraster.h  maskedrasterio.h  maskedrasteriterator.h  raster.h  rasterarea.h  rastercelliterator.h  rastercompare.h  rasterdiff.h  rasteriterator.h  rasterspan.h  rasterspanio.h  rasterutils-private.h  simd.h  sparseraster.h  sparserasterio.h
core/test/: CMakeLists.txt  denserastertest.cpp  eigeniterationtest.cpp  operatorstest.cpp  rasterareatest.cpp  rastercomparetest.cpp  rasteriotest.cpp  rasteriteratortest.cpp  rasterspantest.cpp  rastertest.cpp  sparserastertest.cpp
doc/: api.md
python/: CMakeLists.txt  gdxpy.cpp  pythonadapters.cpp  pythonadapters.h  pythonalgoadapters.cpp  pythonalgoadapters.h  pythonioadapters.cpp  pythonioadapters.h  pythonlogsink.cpp  pythonutils.cpp  pythonutils.h  rasterargument.cpp  rasterargument.h
python/test/: CMakeLists.txt  testgdx.py
test/: CMakeLists.txt  testclusters.py  testdistance.py  testmajority.py  testrasterize.py  testreclass.py  testscenarios.py
test/mapdata/clusters/: HU_admin2_country_001.tif
test/referencedata/clusters/: ref_suminbuffer_circular.asc  ref_suminbuffer_square.asc
testutil/: CMakeLists.txt  testbase.cpp
testutil/include/gdx/test/: comparisons.h  platformsupport.h  printsupport.h  rasterasserts.h  testbase.h
tools/: CMakeLists.txt  gdxcmp.cpp  gdxconv.cpp  gdxinfo.cpp
