find_package(PythonInterp REQUIRED)

add_test(NAME pygdxtest
    COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/testgdx.py
)

get_property(IS_MULTI_CONFIG GLOBAL PROPERTY GENERATOR_IS_MULTI_CONFIG)
if (IS_MULTI_CONFIG)
    set_tests_properties(pygdxtest PROPERTIES ENVIRONMENT PYTHONPATH=${LIBRARY_OUTPUT_PATH}/$<CONFIG>)
else ()
    set_tests_properties(pygdxtest PROPERTIES ENVIRONMENT PYTHONPATH=${LIBRARY_OUTPUT_PATH})
endif ()
